# kubo

./: .coderabbit.yaml  .dockerignore  .env.example  .gitignore  .secrets.baseline  CLAUDE.md  CONTEXT.md  Dockerfile  README.md  compose.dev-lxc.yml  destinations.yaml  docker-compose.yml  pyproject.toml  schedules.yaml
.claude/: settings.json
.claude/agents/: doc-writer.md  fable-advisor.md  implementer.md  scaffolder.md  security-reviewer.md  test-writer.md
.claude/hooks/: check-quality.sh  guard-bash.sh  guard-bash.test.sh  guard-files.sh  stop-tests.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
catalogs/flow_templates/: analysis-review.yaml  analysis.yaml  dev-kubo.yaml  dev-mini.yaml  pipeline.yaml
catalogs/integrations/: github-kubo.yaml  github-readonly.yaml  github-releases.yaml  github-watch.yaml  github.yaml  rss.yaml  telegram.yaml
catalogs/personas/: analista.yaml  coletor.yaml  dev.yaml  finder.yaml  humano.yaml
docs/: kubo-design-system.md  kubo-spec-funcional.md  runbook-deploy.md  runbook.md
docs/adr/: 0001-nome-canonico-kubo.md  0002-tabela-run-extensao-consciente.md  0003-auth-api-bearer-estatico.md  0004-fluxo-git.md  0005-veredito-spike-surrealdb-pins.md  0006-embeddings-gemini-001-768.md  0007-mecanica-migrations.md  0008-desvios-schema-conhecimento.md  0009-contrato-worker.md  0010-agendamento-fase-1.md  0011-topologia-deploy-oute-server.md  0012-import-legado-neon.md  0013-destilacao-e-grafo-buscavel.md  0014-ui-foundation-browser-auth.md  0015-distribuicao-dispatch-destinations.md  0016-personas-flow-minimo-analysis.md  0017-dreno-pago-backlog-destilacao.md  0018-boards-gates-ui-write-path.md  0019-executor-cli-github-persona-dev.md  0020-metodologia-dev-aidlc.md  0021-rito-promocao.md  0022-pipeline-agendado.md  0023-renuncia-scribe-harvest-side-effect-repo.md  0024-issues-github-dois-regimes.md  0025-source-vira-cadastro-no-db.md  0026-revoga-issue-ponteiro.md  0027-destino-vira-cadastro-no-db.md  0028-config-operacional-global-no-db.md  0029-digest-vira-sweep-de-destinos.md  0030-destino-padrao-e-cutover-destinations.md  0031-email-worker-credenciais-via-env.md  0032-llm-sincrono-rota-rss-discovery.md  0033-convite-telegram-webhook-inbound.md  0034-topologia-prd-lxc-irmao.md  0035-exposicao-prd-porta-aberta-caddy.md  0036-auth-prd-firebase-scrypt.md  0037-esteira-cd-build-once-promocao-gated.md  0038-identidade-distribuicao-prd.md  README.md  template.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/design/: README.md
docs/method/: fluxo-aidlc-v1.4.md
docs/sessions/: 0001-fundacao.md  0002-fluxo-git-spike-surrealdb.md  0003-schema-conhecimento-store.md  0004-contrato-worker-loader.md  0005-feed-worker-scheduler.md  0006-deploy-oute-server.md  0007-neon-import-relatorio.md  0007-neon-import.md  0008-m6-destilacao.md  0008-m6-relatorio.md  0009-notas-execucao.md  0009-ui-fundacao.md  0010-notas-execucao.md  0010-ui-conhecimento.md  0011-ui-fidelidade.md  0012-distribuicao.md  0013-personas-flow-minimo.md  (+12 more)
kubo/: __init__.py  __main__.py  chunking.py  embedding.py  errors.py
scripts/: audit_sample.py  backfill_chunks.py  check_env.py  cleanup_0014_dup_distilled.py  deploy-remote.sh  deploy.sh  distill_pilot.py  distiller_smoke.py  drain_distill.py  embedding_smoke.py  neon_import.py  recon-kubo-container.sh  recon-oute-server.sh  spike_cli.py
tests/: test_chunking.py  test_cli.py  test_embedding.py  test_sanity.py
(+319 files in other folders)
