[project]
name = "kubo"
version = "0.1.0"
description = "Kubo (工房) — ateliê pessoal de agentes: coleta, cura conhecimento em grafo, distribui e fabrica seus próprios workers."
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "pydantic>=2.13.4",
    # Pin por EVIDÊNCIA do spike M2 (ADR-0005): SDK 2.0.0 validado contra o
    # servidor surrealdb:v3.1.5 nos 5 comportamentos + restart (14 testes verdes).
    # Par SDK↔server move junto — ver docker-compose.yml e ci.yml.
    "pyyaml>=6.0.3",
    "structlog>=26.1.0",
    "surrealdb==2.0.0",
]

[dependency-groups]
# Tooling de qualidade (sem dependências de runtime na fase M1 — zero código de produção).
# CI roda `uv sync --frozen`, que instala este grupo por padrão.
dev = [
    "ruff",
    "pyright",
    "pytest",
    "pytest-cov",
    "detect-secrets",
    "pip-audit",
    "types-pyyaml>=6.0.12.20260518",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kubo"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# E/F/W (pycodestyle+pyflakes), I (isort), S (bandit/segurança),
# B (bugbear), C90 (mccabe: complexidade). CLAUDE.md §Qualidade.
select = ["E", "F", "W", "I", "S", "B", "C90"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
# Testes podem usar assert (S101) e senhas/tokens fake em fixtures (S105/S106).
"tests/**" = ["S101", "S105", "S106"]

[tool.pyright]
pythonVersion = "3.12"
include = ["kubo", "tests"]
# Basic no pacote em geral; strict nos caminhos críticos (CLAUDE.md §Qualidade).
typeCheckingMode = "basic"
strict = ["kubo/store", "kubo/contracts", "kubo/runtime"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: testes que exigem SurrealDB via docker (rodam no CI e sob demanda local)",
]
